--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,49 @@
     transform: rotate(360deg);
   }
 }
+
+
+/*App styling start from here*/
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body{
+  font-family: var(--font-name);
+}
+
+html{
+  scroll-behavior: smooth;
+}
+
+section{
+  padding: 50px 0px;
+}
+
+a{
+  text-decoration: none;
+  color: unset;
+}
+
+a:hover{
+  color: unset;
+}
+
+ul{
+  list-style: none;
+}
+
+/*---------Reusable Class------*/
+
+.container{
+  width: 1140px;
+  padding: 0px 15px;
+  margin: auto;
+}
+
+.section_title{
+  color: var(--heading-color);
+  font-weight: 700;
+}
